--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Video Frame Capture Tool</title>
+<meta charset="utf8">
 <link rel="stylesheet" href="drag-drop-file.css">
 <script src="drag-drop-file.js"></script>
 
