--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </video>
     <canvas id="canvas"></canvas>
   </div>
-  <span id="feedback">H/L to move by 1/60s, ⇧H/⇧L to move by 1s.</span>
+  <span>⇧J/⇧L to move by 1s, ⇧⌥J/⇧⌥L to move by <sup>1</sup>/<sub>60</sub>s, K to pause/play. <span
+      id="feedback"></span></span>
 </body>
 
 </html>
